--- a/pure-HTML/src/main/webapp/index.html
+++ b/pure-HTML/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Login page</title>
+<title>Login</title>
 </head>
 <body>
 	<h1>Welcome to the  project management application</h1>
