--- a/pure-HTML/src/main/webapp/WEB-INF/GroupDetails.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/GroupDetails.html
@@ -11,5 +11,27 @@
 	<div align="right">
 		<a th:href="@{/Logout}">Logout</a>
 	</div>
+	
+	<h2><span th:text="${group.title}">Group Title</span></h2>
+	<p>Data di creazione: <span th:text="${group.creation_date}">Creation Date</span></p>
+	<p>Durata: <span th:text="${group.duration}">Duration</span></p>
+	<p>Numero minimo di partecipanti: <span th:text="${group.min_participants}">Min Participants</span></p>
+	<p>Numero massimo di partecipanti: <span th:text="${group.max_participants}">Max Participants</span></p>
+	
+	<table>
+		<thead>
+            <tr>
+                <th>Nome</th>
+                <th>Cognome</th>
+            </tr>
+        </thead>
+		<tbody>
+		  <tr th:each="user : ${participants}">
+		  	<td th:text="${user.name}">Name</td>
+		  	<td th:text="${user.surname}">Surname</td>
+		  </tr>    
+		</tbody>
+	</table>
+	
 </body>
 </html>
