fixed logic by saving new group info in the session's attributs up until db save or cancellation

--- a/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
@@ -5,6 +5,7 @@
 <title>Utenti Registrati</title>
 </head>
 <body>
+	<!-- submit to CheckGroup -->
 	<div align="right">
 		<a th:href="@{/GoToHomePage}">Homepage</a>
 	</div>
