--- a/pure-HTML/src/main/webapp/index.html
+++ b/pure-HTML/src/main/webapp/index.html
@@ -6,12 +6,21 @@
 </head>
 <body>
 	<h1>Welcome to the  project management application</h1>
-	<h2>Each servlet checks the access rights</h2>
 	<form action="CheckLogin"
 		method="POST">
 		email: <input type="text" name="email"> <br>
-		password: <input type="password" name="pwd"><br> <input
-			type="submit" value="login">
+		password: <input type="password" name="password"><br> 
+		<input type="submit" value="login">
+	</form>
+	<br>
+	<form action="CheckSignUp"
+		method="POST">
+		name: <input type="text" name="name"> <br>
+		surname: <input type="text" name="surname"> <br>
+		email: <input type="text" name="email"> <br>
+		password: <input type="password" name="password"><br> 
+		repeat password: <input type="password" name="repeatPassword"><br>
+		<input type="submit" value="sign up">
 	</form>
 </body>
 </html>
