--- a/pure-HTML/src/main/webapp/WEB-INF/Homepage.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/Homepage.html
@@ -45,10 +45,10 @@
 		<tbody>
 		  <tr th:each="group : ${createdGroups}">
 		  	<td th:text="${group.title}">Title</td>
-		  	<td th:text="${group.creation_date}">Creation Date</td>
+		  	<td th:text="${group.getDate}">Creation Date</td>
 		  	<td th:text="${group.duration}">Duration</td>
 		  	<td>
-            	<a th:href="@{/RetreiveGroup(groupId=${group.id})}">Details</a>
+            	<a th:href="@{/RetrieveGroup(groupId=${group.id})}">Details</a>
             </td>
 		  </tr>    
 		</tbody>
@@ -66,7 +66,7 @@
 		<tbody>
 		  <tr th:each="group : ${activeGroups}">
 		  	<td th:text="${group.title}">Title</td>
-		  	<td th:text="${group.creation_date}">Creation Date</td>
+		  	<td th:text="${group.getDate}">Creation Date</td>
 		  	<td th:text="${group.duration}">Duration</td>
 		  	<td>
             	<a th:href="@{/RetreiveGroup(groupId=${group.id})}">Details</a>
