--- a/pure-HTML/src/main/webapp/WEB-INF/GroupDetails.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/GroupDetails.html
@@ -12,11 +12,11 @@
 		<a th:href="@{/Logout}">Logout</a>
 	</div>
 	
-	<h2><span th:text="${group.title}">Group Title</span></h2>
-	<p>Data di creazione: <span th:text="${group.creation_date}">Creation Date</span></p>
-	<p>Durata: <span th:text="${group.duration}">Duration</span></p>
-	<p>Numero minimo di partecipanti: <span th:text="${group.min_participants}">Min Participants</span></p>
-	<p>Numero massimo di partecipanti: <span th:text="${group.max_participants}">Max Participants</span></p>
+	<h2><span th:text="${group.getTitle}">Group Title</span></h2>
+	<p>Data di creazione: <span th:text="${group.getDate}">Creation Date</span></p>
+	<p>Durata: <span th:text="${group.getDuration}">Duration</span></p>
+	<p>Numero minimo di partecipanti: <span th:text="${group.getMinParticipants}">Min Participants</span></p>
+	<p>Numero massimo di partecipanti: <span th:text="${group.getMaxParticipants}">Max Participants</span></p>
 	
 	<table>
 		<thead>
@@ -27,8 +27,8 @@
         </thead>
 		<tbody>
 		  <tr th:each="user : ${participants}">
-		  	<td th:text="${user.name}">Name</td>
-		  	<td th:text="${user.surname}">Surname</td>
+		  	<td th:text="${user.getName}">Name</td>
+		  	<td th:text="${user.getSurname}">Surname</td>
 		  </tr>    
 		</tbody>
 	</table>
