fixed retrieve all users and gotohomepage names

--- a/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
@@ -7,7 +7,7 @@
 <body>
 
 	<div align="right">
-		<a th:href="@{/GoToHomePage}">Homepage</a>
+		<a th:href="@{/GoToHomepage}">Homepage</a>
 	</div>
 	<div align="right">
 		<a th:href="@{/Logout}">Logout</a>
