--- a/pure-HTML/src/main/webapp/WEB-INF/Cancel.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/Cancel.html
@@ -11,7 +11,7 @@
 	<h1>Cancellazione del gruppo</h1>
 	<p>Tre tentativi di definire un gruppo con un numero di partecipanti errato, il gruppo non sarà creato</p>
 	<div align="center">
-		<a th:href="@{/GoToHomePage}">Homepage</a>
+		<a th:href="@{/GoToHomepage}">Homepage</a>
 	</div>
 
 </body>
