--- a/pure-HTML/src/main/webapp/WEB-INF/GroupDetails.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/GroupDetails.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div align="right">
-		<a th:href="@{/GoToHomePage}">Homepage</a>
+		<a th:href="@{/GoToHomepage}">Homepage</a>
 	</div>
 	<div align="right">
 		<a th:href="@{/Logout}">Logout</a>
