added email checking, username in database and user

--- a/pure-HTML/src/main/webapp/WEB-INF/Homepage.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/Homepage.html
@@ -9,7 +9,7 @@
 		<a th:href="@{/Logout}">Logout</a>
 	</div>
 	
-	<p th:if="${warning}">Errore! Numero minimo di partecipanti maggiore del numero massimo di partecipanti!</p>
+	<p th:if="${minError}">Errore! Numero minimo di partecipanti maggiore del numero massimo di partecipanti!</p>
 	
 	<form
 		th:action="@{/RetrieveAllUsers}"
