--- a/pure-HTML/src/main/webapp/index.html
+++ b/pure-HTML/src/main/webapp/index.html
@@ -8,7 +8,7 @@
 	<h1>Welcome to the  project management application</h1>
 	<form action="CheckLogin"
 		method="POST">
-		email: <input type="text" name="email"> <br>
+		username: <input type="text" name="username"> <br>
 		password: <input type="password" name="password"><br> 
 		<input type="submit" value="login">
 	</form>
@@ -17,6 +17,7 @@
 		method="POST">
 		name: <input type="text" name="name"> <br>
 		surname: <input type="text" name="surname"> <br>
+		username <input type="text" name="username"> <br>
 		email: <input type="text" name="email"> <br>
 		password: <input type="password" name="password"><br> 
 		repeat password: <input type="password" name="repeatPassword"><br>
