corrected email checking

--- a/pure-HTML/src/main/webapp/index.html
+++ b/pure-HTML/src/main/webapp/index.html
@@ -17,7 +17,7 @@
 		method="POST">
 		name: <input type="text" name="name"> <br>
 		surname: <input type="text" name="surname"> <br>
-		username <input type="text" name="username"> <br>
+		username: <input type="text" name="username"> <br>
 		email: <input type="text" name="email"> <br>
 		password: <input type="password" name="password"><br> 
 		repeat password: <input type="password" name="repeatPassword"><br>
