added error in signup on index.html

--- a/pure-HTML/src/main/webapp/index.html
+++ b/pure-HTML/src/main/webapp/index.html
@@ -15,7 +15,8 @@
 	
 	<br>
 	
-	<p th:text="${error?}"></p>
+	<p th:text="${error}"></p>
+	
 	<form action="CheckSignUp"
 		method="POST">
 		name: <input type="text" name="name"> <br>
