added different errors to be displayed in index.html

--- a/pure-HTML/src/main/webapp/index.html
+++ b/pure-HTML/src/main/webapp/index.html
@@ -15,7 +15,9 @@
 	
 	<br>
 	
-	<p th:text="${error}"></p>
+	<p th:text="${username_error}"></p>
+	<p th:text="${email_error}"></p>
+	<p th:text="${password_error}"></p>
 	
 	<form action="CheckSignUp"
 		method="POST">
