--- a/pure-HTML/src/main/webapp/WEB-INF/GroupDetails.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/GroupDetails.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Dettagli Gruppo</title>
+<link rel="stylesheet" type="text/css" media="all" href="../css/style.css" th:href="@{/css/style.css}" />
 </head>
 <body>
 	<div align="right">
