renamed GoToHomepage to Homepage

--- a/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
@@ -8,7 +8,7 @@
 <body>
 
 	<div align="right">
-		<a th:href="@{/GoToHomepage}">Homepage</a>
+		<a th:href="@{/Homepage}">Homepage</a>
 	</div>
 	<div align="right">
 		<a th:href="@{/Logout}">Logout</a>
