--- a/pure-HTML/src/main/webapp/WEB-INF/Cancel.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/Cancel.html
@@ -12,7 +12,7 @@
 	<h1>Cancellazione del gruppo: <span th:text="${groupTitle}"></span></h1>
 	<p>Tre tentativi di definire un gruppo con un numero di partecipanti errato, il gruppo non sara' creato</p>
 	<div align="center">
-		<a th:href="@{/GoToHomepage}">Homepage</a>
+		<a th:href="@{/Homepage}">Homepage</a>
 	</div>
 
 </body>
