--- a/pure-HTML/src/main/webapp/WEB-INF/Cancel.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/Cancel.html
@@ -10,7 +10,7 @@
 		<a th:href="@{/Logout}">Logout</a>
 	</div>
 	<h1>Cancellazione del gruppo: <span th:text="${groupTitle}"></span></h1>
-	<p>Tre tentativi di definire un gruppo con un numero di partecipanti errato, il gruppo non sara' creato</p>
+	<p class="error-message">Tre tentativi di definire un gruppo con un numero di partecipanti errato, il gruppo non sara' creato</p>
 	<div align="center">
 		<a th:href="@{/Homepage}">Homepage</a>
 	</div>
