--- a/pure-HTML/src/main/webapp/WEB-INF/Homepage.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/Homepage.html
@@ -56,30 +56,34 @@
 	
 	<br>
 	<h3>Crea un nuovo gruppo:</h3>
-	<form
-		th:action="@{/RetrieveAllUsers}"
-		method="POST">
-		
-		<div>
-			<label for="title">Titolo:</label>
-			<input type="text" name="title" required>		
-		</div>
-		<div>
-			<label for="duration">Durata (in giorni):</label>
-			<input type="number" name="duration" min="1" required>
-		</div>
-		<div>
-			<label for="min_participants">Numero minimo di partecipanti:</label>
-			<input type="number" name="min_participants" min="1" required>
-		</div>
-		<div>
-			<label for="max_participants">Numero massimo di partecipanti:</label>
-			<input type="number" name="max_participants" min="1" required>
-		</div>	
-		
-		<input type="submit" name="create" value="Crea Gruppo">		
-	</form>
-	<p th:if="${minError}">Errore! Numero minimo di partecipanti maggiore del numero massimo di partecipanti!</p>
+	
+	<p th:if="${minError}" class="error-message">Errore! Numero minimo di partecipanti maggiore del numero massimo di partecipanti!</p>
+
+	<div class="form-container">
+		<form
+			th:action="@{/RetrieveAllUsers}"
+			method="POST" class="form-container">
+			
+			<div class="input-container">
+				<label for="title">Titolo:</label>
+				<input type="text" name="title" required>		
+			</div>
+			<div class="input-container">
+				<label for="duration">Durata (in giorni):</label>
+				<input type="number" name="duration" min="1" required>
+			</div>
+			<div class="input-container">
+				<label for="min_participants">Numero minimo di partecipanti:</label>
+				<input type="number" name="min_participants" min="1" required>
+			</div>
+			<div class="input-container">
+				<label for="max_participants">Numero massimo di partecipanti:</label>
+				<input type="number" name="max_participants" min="1" required>
+			</div>	
+			
+			<input type="submit" name="create" value="Crea Gruppo">		
+		</form>
+	</div>
 	
 </body>
 </html>
