--- a/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
@@ -14,11 +14,11 @@
 		<a th:href="@{/Logout}">Logout</a>
 	</div>
 	
-	<p th:if="${error_message != ''}" th:text="${error_message}">Error message</p>
+	<p th:if="${error_message != ''}" th:text="${error_message}" class="error-message">Error message</p>
 	
 	<form th:action="@{/CheckGroup}"
 		method="POST">
-		<table>
+		<table class="user-table">
 			<thead>
 				<tr>
 					<th>Nome</th>
