solved GoToHomepage in CheckGroup and removed <br> in index, changed h1 in index

--- a/pure-HTML/src/main/webapp/index.html
+++ b/pure-HTML/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" media="all" href="css/style.css" th:href="@{/css/style.css}" />
 </head>
 <body>
-	<h1>Welcome to the  project management application</h1>
+	<h1>Gruppi di Lavoro</h1>
 
 	<div class="container">
 		<h3>Login</h3>
@@ -50,7 +50,7 @@
 				email: <input type="email" name="email" th:value="${email}" required>
 			</div>
 			<div class="input-container">
-				password: <input type="password" name="password"><br> 
+				password: <input type="password" name="password">
 			</div>
 			<div class="input-container">
 				repeat password: <input type="password" name="repeatPassword" required>
