--- a/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
@@ -13,7 +13,9 @@
 	<div align="right">
 		<a th:href="@{/Logout}">Logout</a>
 	</div>
-	
+		
+	<h2>Seleziona gli utenti da invitare nel gruppo</h2>	
+		
 	<p th:if="${error_message != ''}" th:text="${error_message}" class="error-message">Error message</p>
 	
 	<form th:action="@{/CheckGroup}"
