--- a/pure-HTML/src/main/webapp/WEB-INF/GroupDetails.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/GroupDetails.html
@@ -6,33 +6,37 @@
 <link rel="stylesheet" type="text/css" media="all" href="../css/style.css" th:href="@{/css/style.css}" />
 </head>
 <body>
+
 	<div align="right">
 		<a th:href="@{/Homepage}">Homepage</a>
 	</div>
+
 	<div align="right">
 		<a th:href="@{/Logout}">Logout</a>
 	</div>
 	
-	<h2><span th:text="${group.getTitle}">Group Title</span></h2>
-	<p>Data di creazione: <span th:text="${group.getDate}">Creation Date</span></p>
-	<p>Durata: <span th:text="${group.getDuration}">Duration</span></p>
-	<p>Numero minimo di partecipanti: <span th:text="${group.getMinParticipants}">Min Participants</span></p>
-	<p>Numero massimo di partecipanti: <span th:text="${group.getMaxParticipants}">Max Participants</span></p>
-	
-	<table>
-		<thead>
-            <tr>
-                <th>Nome</th>
-                <th>Cognome</th>
-            </tr>
-        </thead>
-		<tbody>
-		  <tr th:each="user : ${participants}">
-		  	<td th:text="${user.getName}">Name</td>
-		  	<td th:text="${user.getSurname}">Surname</td>
-		  </tr>    
-		</tbody>
-	</table>
-	
+	<div class="container">
+		<h2><span th:text="${group.getTitle}">Group Title</span></h2>
+		<p>Data di creazione: <span th:text="${group.getDate}">Creation Date</span></p>
+		<p>Durata: <span th:text="${group.getDuration}">Duration</span></p>
+		<p>Numero minimo di partecipanti: <span th:text="${group.getMinParticipants}">Min Participants</span></p>
+		<p>Numero massimo di partecipanti: <span th:text="${group.getMaxParticipants}">Max Participants</span></p>
+		
+		<table>
+			<thead>
+				<tr>
+					<th>Nome</th>
+					<th>Cognome</th>
+				</tr>
+			</thead>
+			<tbody>
+			  <tr th:each="user : ${participants}">
+				  <td th:text="${user.getName}">Name</td>
+				  <td th:text="${user.getSurname}">Surname</td>
+			  </tr>    
+			</tbody>
+		</table>
+	</div>
+
 </body>
 </html>
