--- a/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/RegisteredUsers.html
@@ -10,36 +10,39 @@
 	<div align="right">
 		<a th:href="@{/Homepage}">Homepage</a>
 	</div>
+
 	<div align="right">
 		<a th:href="@{/Logout}">Logout</a>
 	</div>
-		
-	<h2>Seleziona gli utenti da invitare nel gruppo</h2>	
-		
-	<p th:if="${error_message != ''}" th:text="${error_message}" class="error-message">Error message</p>
 	
-	<form th:action="@{/CheckGroup}"
-		method="POST">
-		<table class="user-table">
-			<thead>
-				<tr>
-					<th>Nome</th>
-					<th>Cognome</th>
-					<th>Seleziona</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="user : ${registeredUsers}" th:class="${#lists.contains(selectedUsers, user.getId) && highlighted} ? 'highlighted' : ''">
-					<td th:text="${user.getName}">Name</td>
-					<td th:text="${user.getSurname}">Surname</td>
-					<td>
-						<input type="checkbox" name="selected" th:value="${user.getId}" th:checked="${#lists.contains(selectedUsers, user.getId)}"></input>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-		<button type="submit">INVITA</button>		
-	</form>
+	<div class="container">
+		<h2>Seleziona gli utenti da invitare nel gruppo</h2>	
+			
+		<p th:if="${error_message != ''}" th:text="${error_message}" class="error-message">Error message</p>
+		
+		<form th:action="@{/CheckGroup}"
+			method="POST">
+			<table class="user-table">
+				<thead>
+					<tr>
+						<th>Nome</th>
+						<th>Cognome</th>
+						<th>Seleziona</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="user : ${registeredUsers}" th:class="${#lists.contains(selectedUsers, user.getId) && highlighted} ? 'highlighted' : ''">
+						<td th:text="${user.getName}">Name</td>
+						<td th:text="${user.getSurname}">Surname</td>
+						<td>
+							<input type="checkbox" name="selected" th:value="${user.getId}" th:checked="${#lists.contains(selectedUsers, user.getId)}"></input>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+			<button type="submit">INVITA</button>		
+		</form>
+	</div>
 		
 </body>
 </html>
