added .parallel in CheckGroup stram functional expression, centered button in RegisteredUsers and renamed Details to Dettagli

--- a/pure-HTML/src/main/webapp/WEB-INF/Homepage.html
+++ b/pure-HTML/src/main/webapp/WEB-INF/Homepage.html
@@ -28,7 +28,7 @@
 				  <td th:text="${group.getDate}">Creation Date</td>
 				  <td th:text="${group.getDuration}">Duration</td>
 				  <td>
-					<a th:href="@{/RetrieveGroup(groupId=${group.id})}">Details</a>
+					<a th:href="@{/RetrieveGroup(groupId=${group.id})}">Dettagli</a>
 				</td>
 			  </tr>    
 			</tbody>
@@ -50,7 +50,7 @@
 				  <td th:text="${group.getDate}">Creation Date</td>
 				  <td th:text="${group.getDuration}">Duration</td>
 				  <td>
-					<a th:href="@{/RetrieveGroup(groupId=${group.id})}">Details</a>
+					<a th:href="@{/RetrieveGroup(groupId=${group.id})}">Dettagli</a>
 				</td>
 			  </tr>
 			</tbody>
