--- a/RIA/src/main/webapp/index.html
+++ b/RIA/src/main/webapp/index.html
@@ -3,8 +3,15 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Login</title>
+
+<script src="utils.js" charset="utf-8" defer></script>
+<script src="loginManagement.js" charset="utf-8" defer></script>
 <link rel="stylesheet" type="text/css" media="all" href="css/style.css" />
+
 </head>
 <body>
+
+
+
 </body>
 </html>
